project(Test_merge)
cmake_minimum_required(VERSION 3.15.2)
add_executable(test1 source/main.cpp source/hea1.cpp source/hea2.cpp)
add_executable(merge1 source/main_merged.cpp)
set(CMAKE_PREFIX_PATH third_lib/lib)
find_library(THIRD_LIBS libthird_lib.a)
target_link_libraries(merge1 PRIVATE "${THIRD_LIBS}")
